feat: configure static file serving and update GraphQL server URI handling; modify package.json for correct entry point

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "expensetracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon backend/server.js",
+    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
